# JKYi-CloudDisk

./: CMakeLists.txt  JKYi_CloudDisk.sql  README.md  fastdfs.sh  fcgi.sh  nginx.sh  redis.sh  start.sh
bin_cgi/: dealfile  dealsharefile  login  md5  myfiles  register  sharefiles  upload
common/: base64.c  cfg.c  deal_mysql.c  des.c  make_log.c  md5.c  redis_op.c  util_cgi.c
conf/: cfg.json  client.conf  redis_6379.conf  storage.conf  tracker.conf
include/: base64.h  cfg.h  deal_mysql.h  des.h  fdfs_api.h  make_log.h  md5.h  redis_keys.h  redis_op.h  util_cgi.h
src_cgi/: CMakeLists.txt  dealfile_cgi.c  dealsharefile_cgi.c  login_cgi.c  md5_cgi.c  myfiles_cgi.c  reg_cgi.c  sharefiles_cgi.c  upload_cgi.c
